--- a/image_cluster.ipynb
+++ b/image_cluster.ipynb
@@ -57,9 +57,8 @@
     "import matplotlib.pyplot as plt\n",
     "import pymongo\n",
     "\n",
-    "#Connect to mongoDB\n",
-    "conn = pymongo.MongoClient('localhost', 27017)\n",
-    "db = conn.get_database('trainset')\n",
+    "connection = pymongo.MongoClient('localhost', 27017)\n",
+    "db = connection.get_database('trainset')\n",
     "\n",
     "# Absolute file path of  training data images\n",
     "train_data = np.array([])\n",
